deploy-yaml/sentinel/deploy-sentinel.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: course-sentinel-deploy
  name: course-sentinel-deploy
  namespace: course-cloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: course-sentinel-deploy
  strategy: { }
  template:
    metadata:
      labels:
        app: course-sentinel-deploy
    spec:
      containers:
        - image: registry.cn-shengzhen.aliyuncs.com/xiaohh-docker/sentinel:1.8.6
          name: sentinel
          # 存活探针
          livenessProbe:
            # 使用http的get请求判断pod是否存活，请求8719端口的/clusterNode判断pod是否存活
            httpGet:
              path: /clusterNode
              port: 8718
              scheme: HTTP
            # 在pod初始化完毕20秒后再开始进行存活探针
            initialDelaySeconds: 20
            # 之后每隔10秒检查一下应用是否存活
            periodSeconds: 10
          ports:
            - containerPort: 8718
              name: dashboard
              protocol: TCP
            - containerPort: 8719
              name: api
              protocol: TCP
          resources: { }

---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: course-sentinel-deploy
  name: course-sentinel-svc
  namespace: course-cloud
spec:
  ports:
    - name: dashboard
      port: 8718
      protocol: TCP
      targetPort: 8718
      nodePort: 30718
    - name: api
      port: 8719
      protocol: TCP
      targetPort: 8719
       nodePort: 30719
  selector:
    app: course-sentinel-deploy
  type: NodePort
